--- a/AvalonStudio/AvalonStudio/Controls/HoverProbe.xaml
+++ b/AvalonStudio/AvalonStudio/Controls/HoverProbe.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl xmlns="https://github.com/perspex">
+﻿<UserControl xmlns="https://github.com/perspex" xmlns:cont="clr-namespace:AvalonStudio.Controls;assembly=AvalonStudio">
   <Grid Background="#424245">
     <Grid Margin="5">
       <Grid>
@@ -12,13 +12,23 @@
             <TextBlock Text="{Binding Spelling}"/>
             <TextBlock Text="{Binding EnumValue}" Foreground="#FFCEE4AE"/>
             <TextBlock Margin="5 0 2 0" Text="(" IsVisible="{Binding ArgumentsVisibility}"/>
-            <!--            <ListBox Items="{Binding Arguments}" Padding="0" BorderThickness="0" Margin="0 -2 0 0">
-              <ListView.ItemsPanel>
+            <ListBox Items="{Binding Arguments}" Padding="0" BorderThickness="0" Margin="0 -2 0 0">
+              <ListBox.ItemsPanel>
                 <ItemsPanelTemplate>
-                  <StackPanel Margin="0" Orientation="Horizontal"/>
+                  <StackPanel Orientation="Horizontal" Margin="0" />
                 </ItemsPanelTemplate>
-              </ListView.ItemsPanel>
-            </ListBox>-->
+              </ListBox.ItemsPanel>
+              <ListBox.DataTemplates>
+                <DataTemplate DataType="cont:ParameterSymbolViewModel">
+                  <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="{Binding BuiltInTypeDescription}" Foreground="#FF569CD6"/>
+                    <TextBlock Text="{Binding TypeDescription}" Foreground="#FF4ec9b0"/>
+                    <TextBlock Margin="0" Text="{Binding Name}"/>
+                    <TextBlock Margin="0" Text="{Binding Comment}"/>
+                  </StackPanel>
+                </DataTemplate>
+              </ListBox.DataTemplates>
+            </ListBox>
             <TextBlock Margin="2 0 0 0" Text=")" IsVisible="{Binding ArgumentsVisibility}"/>
           </StackPanel>
           <TextBlock Text="{Binding Description}" IsVisible="{Binding DescriptionVisibility}" MaxWidth="500" TextWrapping="Wrap"/>
