--- a/AvalonStudio/AvalonStudio/Controls/HoverProbe.xaml
+++ b/AvalonStudio/AvalonStudio/Controls/HoverProbe.xaml
@@ -12,7 +12,7 @@
             <TextBlock Text="{Binding Spelling}"/>
             <TextBlock Text="{Binding EnumValue}" Foreground="#FFCEE4AE"/>
             <TextBlock Margin="5 0 2 0" Text="(" IsVisible="{Binding ArgumentsVisibility}"/>
-            <ListBox Items="{Binding Arguments}" Padding="0" BorderThickness="0" Margin="0 -2 0 0">
+            <ListBox Items="{Binding Arguments}" BorderThickness="0">
               <ListBox.ItemsPanel>
                 <ItemsPanelTemplate>
                   <StackPanel Orientation="Horizontal" Margin="0" />
