Background colour selected via BaseDark

--- a/AvalonStudio/AvalonStudio/Themes/BaseDark.xaml
+++ b/AvalonStudio/AvalonStudio/Themes/BaseDark.xaml
@@ -3,7 +3,7 @@
        xmlns:mut="https://github.com/perspex/mutable"
        xmlns:sys="clr-namespace:System;assembly=mscorlib">
   <Style.Resources>
-    <SolidColorBrush x:Key="ThemeBackgroundBrush">#FFFFFFFF</SolidColorBrush>
+    <SolidColorBrush x:Key="ThemeBackgroundBrush">#2D2D30</SolidColorBrush>
     <SolidColorBrush x:Key="ThemeBorderLightBrush">#FFAAAAAA</SolidColorBrush>
     <SolidColorBrush x:Key="ThemeBorderMidBrush">#FF888888</SolidColorBrush>
     <SolidColorBrush x:Key="ThemeBorderDarkBrush">#FF333333</SolidColorBrush>
