removed references to WhiteSmoke

--- a/AvalonStudio/AvalonStudio/Themes/BaseDark.xaml
+++ b/AvalonStudio/AvalonStudio/Themes/BaseDark.xaml
@@ -10,7 +10,7 @@
     <SolidColorBrush x:Key="ThemeControlLightBrush">#FFFFFFFF</SolidColorBrush>
     <SolidColorBrush x:Key="ThemeControlMidBrush">#FF3E3E42</SolidColorBrush>
     <SolidColorBrush x:Key="ThemeControlDarkBrush">#FF252526</SolidColorBrush>
-    <SolidColorBrush x:Key="ThemeForegroundBrush">Red</SolidColorBrush>
+    <SolidColorBrush x:Key="ThemeForegroundBrush">#FFC4C4C4</SolidColorBrush>
     <SolidColorBrush x:Key="ThemeForegroundLightBrush">#FF808080</SolidColorBrush>
 
     <SolidColorBrush x:Key="HighlightBrush">#FF086F9E</SolidColorBrush>
