--- a/AvalonStudio/AvalonStudio/Controls/HoverProbe.xaml
+++ b/AvalonStudio/AvalonStudio/Controls/HoverProbe.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl xmlns="https://github.com/perspex" xmlns:cont="clr-namespace:AvalonStudio.Controls;assembly=AvalonStudio">
+﻿<UserControl xmlns="https://github.com/perspex" xmlns:cont="clr-namespace:AvalonStudio.Controls;assembly=AvalonStudio" FontFamily="Verdana" FontSize="12">
   <Grid Background="#424245">
     <Grid Margin="5">
       <Grid>
@@ -11,8 +11,8 @@
             <TextBlock Text="{Binding ClassDescription}" Foreground="#FF4ec9b0"/>
             <TextBlock Text="{Binding Spelling}"/>
             <TextBlock Text="{Binding EnumValue}" Foreground="#FFCEE4AE"/>
-            <TextBlock Margin="5 0 2 0" Text="(" IsVisible="{Binding ArgumentsVisibility}"/>
-            <ListBox Items="{Binding Arguments}" BorderThickness="0">
+            <TextBlock Margin="5 0 0 0" Text="(" IsVisible="{Binding ArgumentsVisibility}"/>
+            <ListBox Items="{Binding Arguments}" BorderThickness="0" Margin="-4 0 0 0">
               <ListBox.ItemsPanel>
                 <ItemsPanelTemplate>
                   <StackPanel Orientation="Horizontal" Margin="0" />
@@ -20,16 +20,16 @@
               </ListBox.ItemsPanel>
               <ListBox.DataTemplates>
                 <DataTemplate DataType="cont:ParameterSymbolViewModel">
-                  <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="{Binding BuiltInTypeDescription}" Foreground="#FF569CD6"/>
-                    <TextBlock Text="{Binding TypeDescription}" Foreground="#FF4ec9b0"/>
+                  <StackPanel Orientation="Horizontal" Margin="0 -4 0 0">
+                    <TextBlock Margin="0"  Text="{Binding BuiltInTypeDescription}" Foreground="#FF569CD6"/>
+                    <TextBlock Margin="0"  Text="{Binding TypeDescription}" Foreground="#FF4ec9b0"/>
                     <TextBlock Margin="0" Text="{Binding Name}"/>
                     <TextBlock Margin="0" Text="{Binding Comment}"/>
                   </StackPanel>
                 </DataTemplate>
               </ListBox.DataTemplates>
             </ListBox>
-            <TextBlock Margin="2 0 0 0" Text=")" IsVisible="{Binding ArgumentsVisibility}"/>
+            <TextBlock Margin="-4 0 0 0" Text=")" IsVisible="{Binding ArgumentsVisibility}"/>
           </StackPanel>
           <TextBlock Text="{Binding Description}" IsVisible="{Binding DescriptionVisibility}" MaxWidth="500" TextWrapping="Wrap"/>
         </StackPanel>
