--- a/AvalonStudio/AvalonStudio/Controls/Registers.xaml
+++ b/AvalonStudio/AvalonStudio/Controls/Registers.xaml
@@ -1,8 +1,8 @@
-﻿<UserControl xmlns="https://github.com/perspex" xmlns:controls="clr-namespace:AvalonStudio.Controls;assembly=AvalonStudio">
+﻿<UserControl xmlns="https://github.com/perspex" xmlns:controls="clr-namespace:AvalonStudio.Controls;assembly=AvalonStudio.Extensibility" xmlns:vm="clr-namespace:AvalonStudio.Controls;assembly=AvalonStudio">
     <controls:ToolControl Title="Registers">
         <ListBox  BorderThickness="0" Items="{Binding Model}" Background="{StyleResource ThemeControlDarkBrush}">
             <ListBox.DataTemplates>
-                <DataTemplate DataType="controls:RegisterViewModel">
+                <DataTemplate DataType="vm:RegisterViewModel">
                     <StackPanel Orientation="Horizontal" Gap="5" Background="{Binding Background}">
                         <TextBlock Text="{Binding Name}" Width="90"  Foreground="#FF007ACC" HorizontalAlignment="Left"/>
                         <TextBlock Text="{Binding Value}" Foreground="#4EC9B0" HorizontalAlignment="Right"/>
