--- a/AvalonStudio/AvalonStudio.Debugging/RegistersView.xaml
+++ b/AvalonStudio/AvalonStudio.Debugging/RegistersView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl xmlns="https://github.com/perspex" xmlns:controls="clr-namespace:AvalonStudio.Controls;assembly=AvalonStudio.Extensibility" xmlns:vm="clr-namespace:AvalonStudio.Controls;assembly=AvalonStudio">
+﻿<UserControl xmlns="https://github.com/perspex" xmlns:controls="clr-namespace:AvalonStudio.Controls;assembly=AvalonStudio.Extensibility" xmlns:vm="clr-namespace:AvalonStudio.Debugging;assembly=AvalonStudio.Debugging">
     <controls:ToolControl Title="Registers">
         <ListBox  BorderThickness="0" Items="{Binding Model}" Background="{StyleResource ThemeControlDarkBrush}">
             <ListBox.DataTemplates>
