--- a/AvalonStudio/AvalonStudio/Controls/Intellisense.xaml
+++ b/AvalonStudio/AvalonStudio/Controls/Intellisense.xaml
@@ -1,7 +1,7 @@
 ﻿<UserControl xmlns="https://github.com/avaloniaui" xmlns:vm="clr-namespace:AvalonStudio.Languages.ViewModels;assembly=AvalonStudio.Extensibility" Focusable="false">  
-  <Grid IsVisible="true">
+  <Grid IsVisible="{Binding IsVisible}">
     <StackPanel Orientation="Horizontal" Gap="2" Background="Transparent">
-      <ListBox Items="{Binding CompletionData}" Background="{StyleResource ThemeControlMidBrush}" BorderBrush="#3e3e42" SelectedItem="{Binding SelectedCompletion, Mode=TwoWay}" Height="180" FontFamily="Segoi UI" FontSize="14" Width="240">        
+      <ListBox Items="{Binding CompletionData}" Background="{StyleResource ThemeControlMidBrush}" BorderBrush="#3e3e42" SelectedItem="{Binding SelectedCompletion, Mode=TwoWay}" MaxHeight="180" FontFamily="Segoi UI" FontSize="14" Width="240">        
         <ListBox.DataTemplates>
           <DataTemplate DataType="vm:MethodCompletionDataViewModel">
             <Grid>
