--- a/AvalonStudio/AvalonStudio.Debugging/RegistersView.xaml
+++ b/AvalonStudio/AvalonStudio.Debugging/RegistersView.xaml
@@ -1,6 +1,6 @@
 <UserControl xmlns="https://github.com/avaloniaui" xmlns:controls="clr-namespace:AvalonStudio.Controls;assembly=AvalonStudio.Extensibility" xmlns:vm="clr-namespace:AvalonStudio.Debugging;assembly=AvalonStudio.Debugging">
     <controls:ToolControl Title="Registers">
-        <ListBox  BorderThickness="0" Items="{Binding Model}" Background="{StyleResource ThemeControlDarkBrush}">
+        <ListBox  BorderThickness="0" Items="{Binding Model}" Background="{StyleResource ThemeControlDarkBrush}" VirtualizationMode="None">
             <ListBox.DataTemplates>
                 <DataTemplate DataType="vm:RegisterViewModel">
                     <StackPanel Orientation="Horizontal" Gap="5" Background="{Binding Background}">
