--- a/AvalonStudio/AvalonStudio/Controls/Editor.xaml
+++ b/AvalonStudio/AvalonStudio/Controls/Editor.xaml
@@ -7,56 +7,56 @@
              xmlns:ia="clr-namespace:Avalonia.Xaml.Interactions.Core;assembly=Avalonia.Xaml.Interactions"
              xmlns:actions="clr-namespace:AvalonStudio.Actions;assembly=AvalonStudio"
              Foreground="WhiteSmoke">
-    <Border BorderBrush="#3E3E42" BorderThickness="1">
-        <Grid>
-            <te:TextEditor Name="editor" TextDocument="{Binding TextDocument, Mode=TwoWay}"
-                           FontFamily="{Binding FontFamily}" FontSize="12" Foreground="#D4D4D4" BorderThickness="0"
-                           BeforeTextChangedCommand="{Binding BeforeTextChangedCommand}"
-                           TextChangedCommand="{Binding TextChangedCommand}"
-                           TextChangedDelay="400"
-                           CaretIndex="{Binding CaretIndex}" VerticalAlignment="Stretch"
-                           AcceptsReturn="true" AcceptsTab="true" TabCharacter="{Binding TabCharacter}"
-                           CaretLocationInTextView="{Binding CaretLocation}" SelectedWord="{Binding WordAtCaret}"
-                           LineHeight="{Binding LineHeight}" BackgroundRenderers="{Binding BackgroundRenderers}"
-                           DocumentLineTransformers="{Binding DocumentLineTransformers}" Margins="{Binding Margins}"
-                           MouseCursorOffset="{Binding MouseCursorOffset, Mode=TwoWay}">
+  <Border BorderBrush="#3E3E42" BorderThickness="1">
+    <Grid>
+      <te:TextEditor Name="editor" TextDocument="{Binding TextDocument, Mode=TwoWay}"
+                     FontFamily="{Binding FontFamily}" FontSize="12" Foreground="#D4D4D4" BorderThickness="0"
+                     BeforeTextChangedCommand="{Binding BeforeTextChangedCommand}"
+                     TextChangedCommand="{Binding TextChangedCommand}"
+                     TextChangedDelay="400"
+                     CaretIndex="{Binding CaretIndex}" VerticalAlignment="Stretch"
+                     AcceptsReturn="true" AcceptsTab="true" TabCharacter="{Binding TabCharacter}"
+                     CaretLocationInTextView="{Binding CaretLocation}" SelectedWord="{Binding WordAtCaret}"
+                     LineHeight="{Binding LineHeight}" BackgroundRenderers="{Binding BackgroundRenderers}"
+                     DocumentLineTransformers="{Binding DocumentLineTransformers}" Margins="{Binding Margins}"
+                     MouseCursorOffset="{Binding MouseCursorOffset, Mode=TwoWay}">
 
-                <te:TextEditor.ContextMenu>
-                    <ContextMenu>
-                        <MenuItem Header="Add Watch" Command="{Binding AddWatchCommand}" />
-                    </ContextMenu>
-                </te:TextEditor.ContextMenu>
+        <te:TextEditor.ContextMenu>
+          <ContextMenu>
+            <MenuItem Header="Add Watch" Command="{Binding AddWatchCommand}" />
+          </ContextMenu>
+        </te:TextEditor.ContextMenu>
 
-                <i:Interaction.Behaviors>
-                    <behaviours:CodeInformationToolTipBehavior>
-                        <cont:HoverProbe DataContext="{Binding HoverProbe}" />
-                    </behaviours:CodeInformationToolTipBehavior>
+        <i:Interaction.Behaviors>
+          <behaviours:CodeInformationToolTipBehavior>
+            <cont:HoverProbe DataContext="{Binding HoverProbe}" />
+          </behaviours:CodeInformationToolTipBehavior>
 
-                    <!--
+          <!--
             <behaviours:DebugInformationToolTipBehaviour>
               <dcont:VariableControlView DataContext="{Binding DebugHoverProbe}" />
             </behaviours:DebugInformationToolTipBehaviour>-->
-                </i:Interaction.Behaviors>
+        </i:Interaction.Behaviors>
 
-                <te:TextEditor.Header>
-                    <!-- <DropDown Items="{Binding IndexItems, Mode=TwoWay}" SelectedItem="{Binding SelectedIndexEntry, Mode=OneWayToSource}" FontFamily ="Arial" BorderThickness="0" Height="20">
-              <DropDown.DataTemplates>
-                <DataTemplate>
-                  <TextBlock Text="{Binding Spelling}" />
-                </DataTemplate>
-              </DropDown.DataTemplates>
-            </DropDown>-->
-                </te:TextEditor.Header>
+        <te:TextEditor.Header>
+          <DropDown Items="{Binding IndexItems, Mode=TwoWay}" SelectedItem="{Binding SelectedIndexEntry}" FontFamily ="Arial" BorderThickness="0" Height="20">
+            <DropDown.DataTemplates>
+              <DataTemplate>
+                <TextBlock Text="{Binding Spelling}" TextAlignment="Left" />
+              </DataTemplate>
+            </DropDown.DataTemplates>
+          </DropDown>
+        </te:TextEditor.Header>
 
-                <te:TextEditor.Content>
-                    <Grid>
-                        <cont:Intellisense DataContext="{Binding Intellisense}" HorizontalAlignment="Left"
-                                           VerticalAlignment="Top" Margin="{Binding Position}" />
-                        <cont:CompletionHint DataContext="{Binding CompletionAdvice}" HorizontalAlignment="Left"
-                                             VerticalAlignment="Top" Margin="{Binding Position}" />
-                    </Grid>
-                </te:TextEditor.Content>
-            </te:TextEditor>
-        </Grid>
-    </Border>
+        <te:TextEditor.Content>
+          <Grid>
+            <cont:Intellisense DataContext="{Binding Intellisense}" HorizontalAlignment="Left"
+                               VerticalAlignment="Top" Margin="{Binding Position}" />
+            <cont:CompletionHint DataContext="{Binding CompletionAdvice}" HorizontalAlignment="Left"
+                                 VerticalAlignment="Top" Margin="{Binding Position}" />
+          </Grid>
+        </te:TextEditor.Content>
+      </te:TextEditor>
+    </Grid>
+  </Border>
 </UserControl>
