Intellisense is now inside a popup. Added events to text editor, so intellisense can know when the user scrolled or moved caret with mouse, and close.

--- a/AvalonStudio/AvalonStudio/Controls/Intellisense.xaml
+++ b/AvalonStudio/AvalonStudio/Controls/Intellisense.xaml
@@ -1,7 +1,6 @@
 ﻿<UserControl xmlns="https://github.com/avaloniaui"
-             xmlns:vm="clr-namespace:AvalonStudio.Languages.ViewModels;assembly=AvalonStudio.Extensibility"
-             Focusable="false">
-    <Grid IsVisible="{Binding IsVisible}">
+             xmlns:vm="clr-namespace:AvalonStudio.Languages.ViewModels;assembly=AvalonStudio.Extensibility">
+    <Popup IsOpen="{Binding IsVisible, Mode=TwoWay}" StaysOpen="false">
         <StackPanel Orientation="Horizontal" Gap="2" Background="Transparent">
             <ListBox Items="{Binding CompletionData}" Background="{StyleResource ThemeControlMidBrush}"
                      BorderBrush="#3e3e42" SelectedItem="{Binding SelectedCompletion, Mode=TwoWay}" MaxHeight="180"
@@ -56,5 +55,5 @@
                 </Grid>
             </Grid>
         </StackPanel>
-    </Grid>
+    </Popup>
 </UserControl>
