Initial basic implementation of diagnostics tooltip.

--- a/AvalonStudio/AvalonStudio/Controls/Editor.xaml
+++ b/AvalonStudio/AvalonStudio/Controls/Editor.xaml
@@ -32,6 +32,10 @@
             <cont:HoverProbe DataContext="{Binding HoverProbe}" />
           </behaviours:CodeInformationToolTipBehavior>
 
+          <behaviours:ErrorInformationToolTipBehavior>
+            <cont:ErrorProbeView DataContext="{Binding ErrorProbe}" />
+          </behaviours:ErrorInformationToolTipBehavior>
+
           <!--
             <behaviours:DebugInformationToolTipBehaviour>
               <dcont:VariableControlView DataContext="{Binding DebugHoverProbe}" />
