Converged all tooltips (debug, hoverprobe and error) into a single editortooltip.

--- a/AvalonStudio/AvalonStudio/Controls/Editor.xaml
+++ b/AvalonStudio/AvalonStudio/Controls/Editor.xaml
@@ -28,18 +28,9 @@
         </te:TextEditor.ContextMenu>
 
         <i:Interaction.Behaviors>
-          <behaviours:CodeInformationToolTipBehavior>
-            <cont:HoverProbe DataContext="{Binding HoverProbe}" />
-          </behaviours:CodeInformationToolTipBehavior>
-
-          <behaviours:ErrorInformationToolTipBehavior>
-            <cont:ErrorProbeView DataContext="{Binding ErrorProbe}" />
-          </behaviours:ErrorInformationToolTipBehavior>
-
-          <!--
-            <behaviours:DebugInformationToolTipBehaviour>
-              <dcont:VariableControlView DataContext="{Binding DebugHoverProbe}" />
-            </behaviours:DebugInformationToolTipBehaviour>-->
+          <behaviours:EditorToolTipBehavior>
+            <cont:ViewModelViewHost DataContext="{Binding ToolTip}" />
+          </behaviours:EditorToolTipBehavior>
         </i:Interaction.Behaviors>
 
         <te:TextEditor.Header>
