--- a/AvalonStudio/AvalonStudio/Controls/SymbolView.xaml
+++ b/AvalonStudio/AvalonStudio/Controls/SymbolView.xaml
@@ -13,7 +13,7 @@
                         <TextBlock Text="{Binding Spelling}" />
                         <TextBlock Text="{Binding EnumValue}" Foreground="#FFCEE4AE" />
                         <TextBlock Margin="5 0 0 0" Text="(" IsVisible="{Binding ArgumentsVisibility}" />
-                        <ListBox Items="{Binding Arguments}" BorderThickness="0" Margin="-4 -4 0 0">
+                        <ListBox Items="{Binding Arguments}" BorderThickness="0" Margin="-4 -4 0 0" VirtualizationMode="None">
                             <ListBox.ItemsPanel>
                                 <ItemsPanelTemplate>
                                     <StackPanel Orientation="Horizontal" Margin="0" />
