--- a/AvalonStudio/AvalonStudio/Controls/SymbolView.xaml
+++ b/AvalonStudio/AvalonStudio/Controls/SymbolView.xaml
@@ -1,6 +1,6 @@
 <UserControl xmlns="https://github.com/avaloniaui"
              xmlns:cont="clr-namespace:AvalonStudio.Controls;assembly=AvalonStudio" FontFamily="Verdana" FontSize="12">
-    <Grid Background="#424245">
+    <Grid Background="{StyleResource ThemeControlDarkBrush}">
         <Grid Margin="5">
             <Grid>
                 <StackPanel Margin="4">
