--- a/AvalonStudio/AvalonStudio/Controls/Editor.xaml
+++ b/AvalonStudio/AvalonStudio/Controls/Editor.xaml
@@ -1,6 +1,7 @@
 ﻿<UserControl xmlns="https://github.com/avaloniaui"
              xmlns:te="clr-namespace:AvalonStudio.TextEditor;assembly=AvalonStudio.TextEditor"
              xmlns:cont="clr-namespace:AvalonStudio.Controls;assembly=AvalonStudio"
+             xmlns:econt="clr-namespace:AvalonStudio.Controls;assembly=AvalonStudio.Extensibility"
              xmlns:dcont="clr-namespace:AvalonStudio.Debugging;assembly=AvalonStudio.Debugging"
              xmlns:behaviours="clr-namespace:AvalonStudio.Behaviors;assembly=AvalonStudio"
              xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
@@ -30,7 +31,7 @@
         <i:Interaction.Behaviors>
           <behaviours:EditorToolTipBehavior>
             <Border BorderBrush="#3E3E42" BorderThickness="1">
-              <cont:ViewModelViewHost DataContext="{Binding ToolTip}" />
+              <econt:ViewModelViewHost DataContext="{Binding ToolTip}" />
             </Border>            
           </behaviours:EditorToolTipBehavior>
         </i:Interaction.Behaviors>
