[Templates] C++ class template added javadoc comments.

--- a/AvalonStudio/AvalonStudio.Projects.CPlusPlus/CPlusPlusClassHeaderTemplate.tt
+++ b/AvalonStudio/AvalonStudio.Projects.CPlusPlus/CPlusPlusClassHeaderTemplate.tt
@@ -19,10 +19,16 @@
 #include <stdbool.h>
 #include <stdint.h>
 
+/**
+ *  <#= className #>
+ */
 class <#= className #>
 {
 #pragma mark Public Members
 public:
+	/**
+	 * Instantiates a new instance of <#= className #>.
+	 */
     <#= className #> ();
     ~<#= className #> ();
 
