--- a/AvalonStudio/AvalonStudio/Controls/Intellisense.xaml
+++ b/AvalonStudio/AvalonStudio/Controls/Intellisense.xaml
@@ -6,7 +6,7 @@
       <StackPanel Orientation="Horizontal" Gap="2" Background="Transparent" IsVisible="{Binding IsVisible}">
         <ListBox Items="{Binding CompletionData}" Background="{StyleResource ThemeControlMidBrush}"
                  BorderBrush="#3e3e42" SelectedItem="{Binding SelectedCompletion, Mode=TwoWay}" MaxHeight="180"
-                 FontFamily="Segoi UI" FontSize="14" Width="240">
+                 FontFamily="Segoi UI" FontSize="14" Width="240" TextBlock.Foreground="#D4D4D4" >
           <ListBox.Styles>
             <Style Selector="ListBoxItem:selected /template/ ContentPresenter">
               <Setter Property="Background" Value="#274452"/>
