--- a/AvalonStudio/AvalonStudio/Controls/Intellisense.xaml
+++ b/AvalonStudio/AvalonStudio/Controls/Intellisense.xaml
@@ -108,7 +108,7 @@
               <Grid>
                 <StackPanel Orientation="Horizontal">
                   <Grid Margin="4">
-                    <Path Height="12" Width="12" Stretch="Uniform" UseLayoutRounding="False" Data="M3,7H9V13H3V7M3,3H21V5H3V3M21,11V13H11V11H21M3,15H17V17H3V15M3,19H21V21H3V19Z" Fill="#FF686868" />
+                    <Path Height="12" Width="12" Stretch="Uniform" UseLayoutRounding="False" Data="M3,7H9V13H3V7M3,3H21V5H3V3M21,11V13H11V11H21M3,15H17V17H3V15M3,19H21V21H3V19Z" Fill="#569CD6" />
                   </Grid>
                   <TextBlock Text="{Binding Title}" />
                 </StackPanel>
