--- a/AvalonStudio/AvalonStudio/Controls/Intellisense.xaml
+++ b/AvalonStudio/AvalonStudio/Controls/Intellisense.xaml
@@ -128,6 +128,20 @@
             
           </ListBox.DataTemplates>
         </ListBox>
+
+        <Grid>
+          <Grid Background="{StyleResource ThemeControlDarkBrush}" VerticalAlignment="Top" HorizontalAlignment="Stretch">
+            <Border BorderBrush="#4D4D50" BorderThickness="1">
+              <StackPanel>
+                <StackPanel Gap="2" Orientation="Horizontal">
+                  <TextBlock Text="{Binding SelectedCompletion.Hint}" />
+                  <TextBlock Text="{Binding SelectedCompletion.OverloadText}" />
+                </StackPanel>
+                <TextBlock Text="{Binding SelectedCompletion.Comment}" />
+              </StackPanel>
+            </Border>
+          </Grid>
+        </Grid>
       </StackPanel>
     </StackPanel>
   </Popup>  
