Finished polishing hyperlinks.

--- a/AvalonStudio/AvalonStudio/Styles/GlobalStyles.xaml
+++ b/AvalonStudio/AvalonStudio/Styles/GlobalStyles.xaml
@@ -1,16 +1,16 @@
 <Styles xmlns="https://github.com/avaloniaui">
-  <Style Selector="Button.hyperLink">
+  <Style Selector="Button.hyperlink">
     <Setter Property="Template">
       <Setter.Value>
         <ControlTemplate>
-          <TextBlock Text="{TemplateBinding Content}" Cursor="Hand" />
+          <TextBlock Text="{TemplateBinding Content}" Cursor="Hand" TextWrapping="Wrap" />
         </ControlTemplate>
       </Setter.Value>
     </Setter>
     <Setter Property="Foreground" Value="#007ACC" />
   </Style>
 
-  <Style Selector="Button:pointerover.hyperLink">
+  <Style Selector="Button:pointerover.hyperlink">
     <Setter Property="Foreground" Value="#67CCFE" />
   </Style>
 </Styles>
