stripping html and more polish on the start screen.

--- a/AvalonStudio/AvalonStudio/Styles/GlobalStyles.xaml
+++ b/AvalonStudio/AvalonStudio/Styles/GlobalStyles.xaml
@@ -13,4 +13,12 @@
   <Style Selector="Button:pointerover.hyperlink">
     <Setter Property="Foreground" Value="#67CCFE" />
   </Style>
+
+    <Style Selector="TextBlock.h1">
+        <Setter Property="FontSize" Value="22" />
+    </Style>
+    
+    <Style Selector="Button.h3">
+        <Setter Property="FontSize" Value="14" />
+    </Style>
 </Styles>
